# edamame_posture_cli

./: .Makefile.swp  .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.bin.toml  Cargo.lib.toml  Cargo.toml  Cross.toml  INSTALL.md  Lima.alpine-test.yml  Lima.linux-test.yml  Lima.ubuntu2004-test.yml  Lima.ubuntu2204-test.yml  Makefile  README.md  USERINTENT.md  build.rs  cve-2025-30066-explanation.md  install.sh  toto
.cargo/: config.toml
.cursor/rules/: project.mdc
.github/workflows/: CVE-2025-30066.yml  combine.yml  format.yml  perf.yml  release.yml  release_apks.yml  release_debs.yml  release_deploy_all.yml  release_deploy_apks.yml  release_deploy_debs.yml  release_deploy_debs_no_cac.yml  release_deploy_linux.yml  release_deploy_linux_alpine.yml  release_deploy_linux_alpine_aarch64.yml  release_deploy_linux_amazon_arm.yml  release_deploy_macos.yml  release_deploy_others.yml  release_deploy_windows.yml  release_install.yml  release_others.yml  rust_format.yml  security.yml  test_all.yml  test_installers.yml  test_linux.yml  test_macos.yml  test_persistence.yml  test_threat_evidence.yml  test_windows.yml  test_windows_pcap.yml  tests.yml  update_apk_index.yml
alpine/: edamame_posture.init
chocolatey/: edamame-posture.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
completions/: _edamame_posture  edamame_posture.bash  edamame_posture.fish
debian/: debug_deb_repo.sh  edamame_posture.conf  edamame_posture.service  edamame_posture_daemon.sh  postinst  prerm  service
debian/completions/: _edamame_posture  edamame_posture.bash  edamame_posture.fish
docker/: Dockerfile.ubuntu18.04  Dockerfile.ubuntu20.04  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu25.04  entrypoint.sh  run_agentic_test.sh  run_local_tests.sh
edamame_posture.xcodeproj/: project.pbxproj
homebrew/: edamame-posture.rb
linux/: edamame_posture.conf  edamame_posture_daemon.sh  edamame_setup.sh
macos/: find-provisioning-profile.sh  localsign.sh  make-pkg.sh  notarization.sh  postinstall  sign.sh
macos/edamame_posture_xcode/edamame_posture_xcode/: edamame_posture-Bridging-Header.h  main.swift
macos/edamame_posture_xcode/edamame_posture_xcode.xcodeproj/: project.pbxproj
macos/edamame_posture_xcode/edamame_posture_xcode.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
macos/fastlane/: Appfile  Fastfile  Matchfile  README.md  report.xml
src/: background.rs  base.rs  cli.rs  commands.rs  daemon.rs  display.rs  lib.rs  logs.rs  main.rs  state.rs
tests/: agent_plugin_commands_test.sh  basic_cargo_test.sh  divergence_demo_scenarios_test.sh  ebpf_test.sh  integration_test.sh  llm_test.sh  standalone_commands_test.sh
tests/common/: sanitize_logs.py
tests/perf/: calibrate.py  check_regression.py  generate_report.py  run_scenario.sh  sampler.py
tests/security/: check_gate.py  generate_report.py  run_cve_detection.sh  run_false_positive_baseline.sh
tests/threat_evidence/: README.md  run_threat_evidence_lima.sh  run_threat_evidence_stability.sh
windows/: npcap.ahk  sign.sh
