[package]
name = "edamame_posture"
version = "0.9.5"
edition = "2021"

[dependencies]
#edamame_core = { path = "../edamame_core", features = [ "standalone", "swiftrs" ] }
edamame_core = { git = "https://github.com/edamametechnologies/edamame_core", branch = "main", features = [ "standalone", "swiftrs" ] }

# Error handling
anyhow = "1.0.82"

# Progress
indicatif = "0.17.7"

# YAML
serde = "1.0.204"
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.100"

# System
sysinfo = "0.33.0"
dirs = "6.0.0"

# Machine UID
machine-uid = "0.5.2"

# CLI
clap = "4.1.1"
regex = "1.10.12"

# Logging
tracing = "0.1.40"

# Encrypted env (weak)
envcrypt = "0.5.0"

# Misc
lazy_static = "1.4.0"
mutex = "0.1.0"
base64 = "0.22.1"

# Linux and macOS 
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
# Local copy in order to allow rapid development/debug
#edamame_foundation = { path = "../edamame_foundation", features = [ "packetcapture", "asyncpacketcapture" ] }
edamame_foundation = { git = "https://github.com/edamametechnologies/edamame_foundation", branch = "main", features = [ "packetcapture", "asyncpacketcapture" ] }
# Process
daemonize = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
# Local copy in order to allow rapid development/debug
#edamame_foundation = { path = "../edamame_foundation" }
edamame_foundation = { git = "https://github.com/edamametechnologies/edamame_foundation", branch = "main" }
windows = { version = "0.58.0", features = [ "Win32_System_Environment",  "Win32_System_Threading", "Win32_Foundation",  "Win32_Security" ] }
widestring = "1.1.0"

[build-dependencies]

# Build metadata
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "si"] }

