[package]
name = "edamame_posture"
version = "0.9.82"
edition = "2021"
description = "EDAMAME Security posture analysis and remediation"

[dependencies]
# Local copy in order to allow rapid development/debug
#edamame_core = { path = "../edamame_core", features = [ "standalone", "swiftrs" ] }
edamame_core = { git = "https://github.com/edamametechnologies/edamame_core", branch = "main", features = [ "standalone", "swiftrs" ] }
# Local copy in order to allow rapid development/debug
#flodbadd = { path = "../flodbadd" }
flodbadd = { git = "https://github.com/edamametechnologies/flodbadd", branch = "main" }

# Error handling
anyhow = "1.0.82"

# Progress
indicatif = "0.18.0"

# YAML
serde = "1.0.204"
serde_yaml_ng = "0.10"
serde_json = "1.0.100"

# System
sysinfo = "0.37.0"
dirs = "6.0.0"

# Machine UID
machine-uid = "0.5.2"

# CLI
clap = "4.1.1"
clap_complete = "4.5.1"
regex = "1.10.12"

# Logging
tracing = "0.1.40"

# Encrypted env (weak)
envcrypt = "0.5.0"

# Misc
lazy_static = "1.4.0"
mutex = "1.0.0"
base64 = "0.22.1"
uuid = "1.16.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

# Linux and macOS 
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
# Local copy in order to allow rapid development/debug
#edamame_foundation = { path = "../edamame_foundation", features = [ "packetcapture" ] }
edamame_foundation = { git = "https://github.com/edamametechnologies/edamame_foundation", branch = "main", features = [ "packetcapture" ] }
# Process
daemonize = "0.5.0"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
# Local copy in order to allow rapid development/debug
#edamame_foundation = { path = "../edamame_foundation" }
edamame_foundation = { git = "https://github.com/edamametechnologies/edamame_foundation", branch = "main" }
windows = { version = "0.58.0", features = [ "Win32_System_Environment",  "Win32_System_Threading", "Win32_Foundation",  "Win32_Security", "Win32_System_LibraryLoader" ] }
widestring = "1.1.0"

# Linux
[target.'cfg(any(target_os = "linux"))'.dependencies]
cargo-deb = "3.3.0"
# See cargo-deb crate for configuration: https://crates.io/crates/cargo-deb
[package.metadata.deb]
name = "edamame-posture"
extended-description = "EDAMAME Posture service"
maintainer = "EDAMAME Technologies"
copyright = "EDAMAME Technologies"
license-file = ["LICENSE", "0"]
maintainer-scripts = "debian/"
depends = ["systemd, libpcap-dev"]
assets = [
    { source = "target/release/edamame_posture", dest = "usr/bin/edamame_posture", mode = "0755" },
    { source = "debian/edamame_posture_daemon.sh", dest = "usr/bin/edamame_posture_daemon.sh", mode = "0755" },
    { source = "linux/edamame_posture.conf", dest = "etc/edamame_posture.conf", mode = "0644" },
    { source = "debian/edamame_posture.service", dest = "lib/systemd/system/edamame_posture.service", mode = "0644" },
    # Add completion files for different shells
    { source = "completions/edamame_posture.bash", dest = "usr/share/bash-completion/completions/edamame_posture", mode = "0644" },
    { source = "completions/edamame_posture.fish", dest = "usr/share/fish/vendor_completions.d/edamame_posture.fish", mode = "0644" },
    { source = "completions/_edamame_posture", dest = "usr/share/zsh/vendor-completions/_edamame_posture", mode = "0644" },
]

[build-dependencies]

# Local copy in order to allow rapid development/debug
#flodbadd = { path = "../flodbadd", features = [ "packetcapture", "asyncpacketcapture" ] }
flodbadd = { git = "https://github.com/edamametechnologies/flodbadd", branch = "main", features = [ "packetcapture", "asyncpacketcapture" ] }

# Build metadata
clap = "4.1.1"
# Easier to generate completions with the cli once it's built
# clap_complete = "4.5.1"
vergen-gitcl = { version = "1.0.5", features = [ "build", "cargo", "rustc", "si" ] }
